testdata/asm/invalid/div_03.zkasm
;;error:7:3-31:quotient bit overflow (u16 into u15)
fn div(x u16, y u16) -> (q u15, r u16) {
  var sum u32
  var witsum u17
  var w u16
  ;;
  q, r, w, sum, witsum = x / y
  return
}
